# acapy-resolver-universal

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: code-quality-check.yml  publish-release.yml  tests.yml
demo/: README.md  docker-compose.yml
demo/runner/: Dockerfile  __init__.py  __main__.py  inputs.json
docker/: Dockerfile  README.md  default.yml  plugin-config.yaml
docs/: report.html
http_uniresolver/: __init__.py  default_config.json  default_config.yml  http_universal.py
http_uniresolver/tests/: test_http_universal.py
int/: test_resolution.py  uniresolver_config.json
tests/: test_http_universal.py  test_resolver.py
universal_resolver/: __init__.py  resolver.py
