[tool.pytest.ini_options]
addopts = "-p no:warnings -m \"not int\""
markers = [
    "int: integration tests"
]

[tool.poetry]
name = "acapy-resolver-universal"
version = "0.1.0"
description = "DID Resolver HTTP bindings for Universal Resolver for ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>", "Luis Gomez <luis.gomezalonso@sicpa.com>"]
license = "Apache-2.0"
readme = "README.md"
repository="https://github.com/sicpa-dlab/aries-acapy-plugin-http-uniresolver"
packages = [
    { include = "universal_resolver" }
]

[tool.poetry.dependencies]
python = "^3.6.9"
aries-cloudagent = "^0.7.4rc4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
asynctest = "0.13.0"
black = "^22.3.0"
flake8 = "^3.9.2"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
